--- a/pencilwars.html
+++ b/pencilwars.html
@@ -10,4 +10,4 @@
   <head>
 
 
-<iframe src="http://beta.modd.io/play/pencilwars" height="100%" width="100%" frameborder="0">Your browser does not support iframes<a href="http://beta.modd.io/play/pencilwars"> click here to view the page directly. </a></iframe>
+<iframe src="https://www.modd.io/play/pencilwars" height="100%" width="100%" frameborder="0">Your browser does not support iframes<a href="http://beta.modd.io/play/pencilwars"> click here to view the page directly. </a></iframe>
